# raylib-open-sound-control

./: .gitignore  CMakeLists.txt  README.md
source/: app.cpp  app.h  main.cpp  osc_handler.h  reactive_element.cpp  reactive_element.h  scene.cpp  scene.h
